Test_Files/abstract_vm/Error/format3.asm
;     Format 3
;   ============
;   Error test 5

zosh int8(45)
rush level(21)
rofl
adde
erf
dump
exit
